--- a/index.html
+++ b/index.html
@@ -10,12 +10,35 @@
     <div>
         <header>
             <h1>Hello HTML101</h1>
+            <img src="https://gdb.voanews.com/EEA0B145-95D4-4532-9C69-D0FCD1833D53_w408_r0_s.jpg" alt="">
         <header>
         <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="https://google.com">Services</a></li>
+            </ul>
             Navigation Area
         <nav>
         <div>
+            Hi
             Main Content Area
+            <p>This is a paragraph inside the main content area.</p>
+            <h2>คระวิทยาศาสตร์</h2>
+            <p>สาขาวิทยาศาสตร์คอมพิวเตอร์</p>
+            <div>
+                <h3>ข่าว 1</h3>
+                <p>วันที่ dd/mm/yyyy</p>
+            </div>
+            <div>
+                
+                <h3>ข่าว 2</h3>
+                <p>วันที่ dd/mm/yyyy</p>
+            </div>
+            <div>
+                <h3>ข่าว 3</h3></div>
+                <p>วันที่ dd/mm/yyyy</p>
         </div>
 
         <footer>
